force-app/main/default/objects/Apttus__IDEProvision__c/Apttus__IDEProvision__c.object-meta.xml
<CustomObject>
    <description>Holds information about one or more provisions supported by the IDE provider</description>
    <label>IDE Provision</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IDE Provisions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>