force-app/main/default/objects/Apttus__IDEProvision__c/fields/Apttus__Active__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>The active indicator for the IDE provision</description>
    <inlineHelpText>Please use this indicator to enable or disable the IDE provision</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>