force-app/main/default/objects/Apttus__IDEProvision__c/fields/Apttus__Description__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Description__c</fullName>
    <description>The provision description</description>
    <inlineHelpText>The provision description</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>