force-app/main/default/objects/Apttus__IDEProvision__c/fields/Apttus__IDEName__c.field-meta.xml
<CustomField>
    <fullName>Apttus__IDEName__c</fullName>
    <description>The name of the IDE provider</description>
    <externalId>true</externalId>
    <inlineHelpText>The name of the IDE provider</inlineHelpText>
    <label>IDE Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>