force-app/main/default/objects/Apttus__IDEProvision__c/fields/Apttus__ProvisionType__c.field-meta.xml
<CustomField>
    <fullName>Apttus__ProvisionType__c</fullName>
    <description>Type of provision</description>
    <inlineHelpText>Please select provision type</inlineHelpText>
    <label>Provision Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Clause</fullName>
            </value>
            <value>
                <fullName>Field</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>