force-app/main/default/objects/Apttus__IDEProvision__c/fields/Apttus__TemplateReferenceId__c.field-meta.xml
<CustomField>
    <fullName>Apttus__TemplateReferenceId__c</fullName>
    <description>Template Reference ID</description>
    <inlineHelpText>Please provide Template Reference ID for the clause</inlineHelpText>
    <label>Template Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>